using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string IsRunningBool = "IsRunning";
    internal static string IsGroundedBool = "IsGrounded";
    internal static string YVelocity = "YVelocity";
    internal static string JumpTrigger = "Jump";
    internal static string IsOnWallBool = "IsOnWall";
    internal static string IsOnRoofBool = "IsOnRoof";
    internal static string FireGunTrigger = "FireGun";
    internal static string IsAliveBool = "IsAlive";
    internal static string HasTargetBool = "HasTarget";
    internal static string IsCrouchedBool = "IsCrouched";
}